fix(styles): remove extra heading and accordion bottom spacing

--- a/packages/styles/src/styles/components/_accordion.css
+++ b/packages/styles/src/styles/components/_accordion.css
@@ -28,6 +28,7 @@
 
 .accordion-details:last-child {
     margin-block-end: 0;
+    border-bottom-width: 0;
 }
 
 /* stylelint-disable-next-line selector-pseudo-element-no-unknown */
