--- a/packages/styles/src/styles/variables.css
+++ b/packages/styles/src/styles/variables.css
@@ -30,7 +30,7 @@
         --heading-6: var(--body-font-size);
         --heading-font-weight: 500;
         --heading-line-height: var(--base-line-height);
-        --heading-margin-block-end: var(--spacer-2);
+        --heading-margin-block-end: 0;
         --heading-font-family:
             -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, helvetica, arial, sans-serif, 'Apple Color Emoji',
             'Segoe UI Emoji', 'Segoe UI Symbol';
